Added further detail to the memo file

--- a/templates/memo/memo.html
+++ b/templates/memo/memo.html
@@ -10,6 +10,9 @@
         <li>SNS for encouraging people under God's standard</li>
         <li>Memo App</li>
         <li>Schedule and Ticker App for recording what you need to do and what you have done</li>
+        <li>Take a look at the <a href="https://github.com/django-cms/django-cms">Django CMS Github</a> for
+            further studying and you can also check their
+                <a href="https://docs.django-cms.org/en/latest/whoisbehind/index.html">docs site</a></li>
     </ul>
 </body>
 </html>
